login and register api s are completed
